--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
+  "homepage": "https://vmbcqn9.github.io/shainbilal",
+
+   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+     "build": "react-scripts build",
+     "predeploy": "npm run build",
+     "deploy": "gh-pages -d build",
+     "test": "react-scripts test",
+     "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
